Checkpoint work to git

--- a/content/content/nt/01_nt_functionality.md.erb
+++ b/content/content/nt/01_nt_functionality.md.erb
@@ -78,19 +78,17 @@ title: nano Twitter Functionality
   * Ability to tweet
   * Mini-profile
 * Specific user's page (/user/1234)
-  * If someone is logged in
-    * User 1234's most recent 50 tweets
-    * User 1234s mini-profile
-    * Button to follow that user (available only if logged in and not looking at self.
-    * Link to list of users followed by this user. Link text is a count.
-    * Link to list of newest tweets of users followed by this user.
-    * Link to list of users following this user. Link text is a count.
-  * If no one is logged in
-    * Display login link
-* Registration and related
+  * User 1234's most recent 50 tweets
+  * User 1234s mini-profile
+  * Button to follow that user (available only if logged in and not looking at self.)
+  * Link to list of users followed by this user. Link text is a count.
+  * Link to list of newest tweets of users followed by this user.
+  * Link to list of users following this user. Link text is a count.
+* Functionality pages
   * Display the user registration page (/user/register)
   * Display user login prompt, and check for correct password (/login)
   * Logout (/logout)
+  * Display Search interface (/search)
 
 <%= include_topic :nt_test_interface %>
 
