Checkpoint work to git

--- a/content/content/lectures/part2/04_architectures.md.erb
+++ b/content/content/lectures/part2/04_architectures.md.erb
@@ -13,7 +13,7 @@ cat: nt
     * Job of the Feed, Subscription and Entry Models. In chapter 3, he describes three models as part of the overall data model: Feed, Subscription and Entry. Explain what kind of data each model contains, what the relationships are that it has, and what exactly the meaning or purpose is of that model. Also explain what the analog of each of those models would be to your nanoTwitter data model.
     * Still Confused? Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, say so. And add the two ideas, explanations or concepts that yove learned that you think are particularly interesting or important. Please make it clear whether it's a confusion or an insight.
     *  <%= deliverable "Respond to warmup questions from this chapter by 8am" %>
-1. <%= partbadge %> <%= codebadge %> **Work on NanoTwitter 0.2** Begin work on nanoTwitter 0.2 (<%= link_to_section :nt, :nt_outline %>). This work is all done together as a team. It makes sense to divide up tasks between the team members. All nanoTwitter work, from here on, should happen in your <%= link_to_intro :portfolio %>, directory `/nanotwitter`.  <%= team_deliverable %(nT code for [nanoTwitter 0.2] in portfolio and zipped up to latte) %>
+1. <%= codebadge %> **Work on NanoTwitter 0.2** Begin work on nanoTwitter 0.2 (<%= link_to_section :nt, :nt_outline %>). This work is all done together as a team. From now on, nanoTwitter work should happen in your shared github directory. From time to time you will zip it up and submit it to Latte.
 
 
 #### Discussion
