--- a/content/content/lectures/part2/03_sinatra_architecture.md.erb
+++ b/content/content/lectures/part2/03_sinatra_architecture.md.erb
@@ -23,20 +23,20 @@ cat: web
   * Why might Sinatra be better than Rails for SOA?
 
 #### Walk through of a basic scenario
-* Cricket scoring application - First cut
-  * Millions of fans are constantly refreshing page to see current score
-  * Admin (referree?) enters in scores and stats as the game progresses
+* Baseball scoring application - First cut
+  * Millions of fans are constantly refreshing page to see current score in real time as the game progresses
+  * A local official enters stats as the game progresses
   * Default implementation with a single "monolythic" app
   * How things break down
 * Divide into two services: Fan user interface app
-  * All scores are stored in a static JSON file on disk, "cricket_data.json"
+  * All scores are stored in a static JSON file on disk, "latest_scores.json"
   * Read only. This app never writes
   * Nearly infinitely scalable
 * Admin app: Admin user interface
   * Create new games
   * Add new stats and info durng game
   * Stored in a Postgres database
-  * Writes out new version of "cricket_data.json" once per second
+  * Writes out new version of "latest_scores.json" once per second
   * Always responsive, no matter what's going on on user side
 * Let's look: Isolation, Robustness, Scalability, Agility, Interoperability, Reuse
 
