Checkpoint work to git

--- a/content/content/lectures/part2/03_sinatra_architecture.md.erb
+++ b/content/content/lectures/part2/03_sinatra_architecture.md.erb
@@ -6,7 +6,7 @@ cat: web
 ---
 
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
+**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Code | <%=zipbadge %>: Zipped
 
 1. <%= pdfbadge %> <%= partbadge %> <%= timebadge %> **Read [SOODR] Chapter 2:** \[SODRR\] Chapter 2. Make note of points that confused you. It is a bit of an abstract chapter, but it sets the stage for the kinds of architectures we care about. Answer the following warmup questions about the chapter:
     * What is a Service Oriented Architecture? The whole chapter is about that topic and I don't expect you to reproduce the chapter. How do you recognize a SOA? What are some of the advantages? How would you explain it to an experienced web developer who had not taken this course?
@@ -14,7 +14,7 @@ cat: web
     * Still Confused? Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, say so. And add the two ideas, explanations or concepts that yove learned that you think are particularly interesting or important. Please make it clear whether it's a confusion or an insight.
   * <%= deliverable "Submit warmup questions" %>
 1. <%= pdfbadge %> **Schema:** Complete and submit the [DBSCHEMA] part of nanoTwitter 0.1 (see  <%= link_to_section :nt, :nt_outline %>.). Do it individually, not with your team. <%= deliverable "nanoTwitter Schema Design" %>
-1. <%= partbadge %> <%= codebadge %> **Complete nt 0.1 as a team:** See: <%= link_to_section :nt, :nt_outline %>. All the work is happening in your portfolio, directory `/nanotwitter`. <%= team_deliverable %(nT code for [nanoTwitter 0.1] in portfolio and zipped up to latte) %>
+1. <%= partbadge %> <%= codebadge %> **Complete nt 0.1 as a team:** See: <%= link_to_section :nt, :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### Discussion
 * Discussion about Chapter 2, what is a service and related questions
