--- a/content/content/lectures/part3/01_scaling_twitter.md.erb
+++ b/content/content/lectures/part3/01_scaling_twitter.md.erb
@@ -12,7 +12,7 @@ cat: scale
   * Read [R.Charette, “Why Software Fails - IEEE Spectrum.”](http://bit.ly/1x5YG1n)
   * Watch [Healthcare.gov failure: Analysis and discussion](http://youtu.be/Rl5WFz6Gi28) ([also available here...](http://www.frequency.com/video/cs169-v13-w8l2s7/132108449))
   * <%= deliverable "Write a one or two page response to the questions I posed above. Support your arguments with references to the paper or other sources." %>
-1. <%=partbadge %> <%= codebadge %> <%= pdfbadge %> Complete nt 0.3 as a team (See: <%= link_to_section :nt, :nt_outline %>). Write and submit a brief project update as a pdf. What went well, what were the challenges, and what are the remaining problems. <%= team_deliverable %(nT code for \[nanoTwitter 0.3\] in portfolio and github. Submit to Latte the brief project update.) %>
+1. <%= partbadge %> <%= codebadge %> **Complete nt 0.3 as a team:** See: <%= link_to_section :nt, :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### What does scaling mean for nanoTwitter?
 * What kinds of activities will likely demonstrate a scale problem?
