--- a/content/content/lectures/part3/04_scl_cache.md.erb
+++ b/content/content/lectures/part3/04_scl_cache.md.erb
@@ -7,7 +7,7 @@ cat: scale
 <%= homework_hdr %>
 **Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
 
-1. <%=partbadge %> <%= codebadge %> <%= pdfbadge %> Complete nt 0.4 as a team (See: <%= link_to_section :nt, :nt_outline %>). Write and submit a brief project update as a pdf. What went well, what were the challenges, and what are the remaining problems. <%= team_deliverable %(nT code for **nanoTwitter 0.4** in portfolio and github. Submit to Latte the brief project update.) %>
+1. <%= partbadge %> <%= codebadge %> **Complete nt 0.4 as a team:** See: <%= link_to_section :nt, :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### nT 0.4
 * 5 minute team discussion about your status
