--- a/content/content/lectures/part3/05_cloud_deployment.md.erb
+++ b/content/content/lectures/part3/05_cloud_deployment.md.erb
@@ -1,13 +1,13 @@
 ---
 title: The Cloud
 desc: How is the cloud a central part of modern software engineering?
-homework: 1) Fully complete all work up to nT 0.4; 2) Self and Peer assessments; 3) Read article ad do warmups
+homework: 1) Fully complete all work up to nT 0.4; 2) Self and Peer assessments; 3) Read article and do warmups
 cat: scale
 ---
 <%= homework_hdr %>
 **Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
 
-1. <%= codebadge %> <%= pdfbadge %> **Extension!** Complete 0.4 as a team (See: <%= link_to_section :nt, :nt_outline %>). Write and submit a brief project update as a pdf. What went well, what were the challenges, and what are the remaining problems. **Note**: the grade for this item will be in reference to the state of the code, not just the progress update. Note 2: The mark this assignment receives will reflect how comlete your nT 0.4 is. <%= team_deliverable %(nT code for [nanoTwitter 0.4] in portfolio and github. Submit to Latte the brief project update.) %>
+1. <%= codebadge %> **Formal graded Checkpoint** Make sure you've completed as a team up to at least nT0.4's requirements (see <%= link_to_section :nt, :nt_outline %>), including the various documentation pieces. <%= team_deliverable "Update the github repo, zip up the directory and submit to latte."%>
 1. <%= pdfbadge %> <%= partbadge %> <%= include_topic :hw_self_peer_assess_v3 %>
 1. <%= pdfbadge %> <%= timebadge %> <%= partbadge%>  **Read and Warmups**: Read this article by famous Software Engineering thinker [Martin Fowler](http://martinfowler.com): [Continuous Integration](http://martinfowler.com/articles/continuousIntegration.html). Please answer these warmup questions:
   * Thinking about your nanoTwitter team, how close are you to meeting the criteria of Continous Integration laid out in this article?
