changed some links and prepared for tomorrow

--- a/content/content/intro/04_nt_links.md.erb
+++ b/content/content/intro/04_nt_links.md.erb
@@ -1,6 +1,11 @@
 ---
-title: Useful references
+title: nanoTwitter
 ---
+#### nanoTwitter
+* <%= link_to_topic :nt_arch %>
+* <%= link_to_topic :nt_outline %>
+* <%= link_to_topic :nt_functionality %>
+
 #### Twitter's Architecture
 * [Twitter: From Ruby on Rails to the JVM](http://youtu.be/ohHdZXnsNi8)
 * [Real Time Delivery Architecture at Twitter](http://www.infoq.com/presentations/Real-Time-Delivery-Twitter)
