--- a/content/content/lectures/part1/01_welcome.md.erb
+++ b/content/content/lectures/part1/01_welcome.md.erb
@@ -51,7 +51,7 @@ homework: 1) Setup linux if needed; 2) Install Ruby; 3) Go through Ruby the hard
 
 #### Project
 
-* All students will work in teams on their version of <%= link_to_section :nt, :nt_outline %>
+* All students will work in teams on their version of <%= link_to_topic :nt_outline %>
 * We will form teams of exactly 4 students. You will be assigned to a team.
 * Notes about <%= link_to_topic :working_in_teams %>
 
