--- a/content/content/lectures/part2/04_cloudarch.md.erb
+++ b/content/content/lectures/part2/04_cloudarch.md.erb
@@ -15,18 +15,23 @@ cat: nt
     * Job of the Feed, Subscription and Entry Models. In chapter 3, he describes three models as part of the overall data model: Feed, Subscription and Entry. Explain what kind of data each model contains, what the relationships are that it has, and what exactly the meaning or purpose is of that model. Also explain what the analog of each of those models would be to your nanoTwitter data model.
     * Still Confused? Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, say so. And add the two ideas, explanations or concepts that yove learned that you think are particularly interesting or important. Please make it clear whether it's a confusion or an insight.
     *  <%= deliverable "Respond to warmup questions from this chapter by 8am" %>
-<<<<<<< HEAD
-1. <%= codebadge %> **Work on NanoTwitter 0.2** Begin work on nanoTwitter 0.2 (<%= link_to_section :nt, :nt_outline %>). This work is all done together as a team. From now on, nanoTwitter work should happen in your shared github directory. From time to time you will zip it up and submit it to Latte.
+  1. **Teams continue to work on nanoTwitter 0.2**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
-=======
-  1. **Teams continue to work on nanoTwitter 0.2**. See: <%= link_to_section :nt, :nt_outline %> for detailed submission instructions and specifics for this stage.
->>>>>>> 667781c77233c767ad39888eca363af35b65621e
+#### Interesting but not required extra reading
+* [Types of Cloud Computing](https://aws.amazon.com/types-of-cloud-computing/)
 
 #### Discussion
-* Let's take another look at the example from Tuesday
-* Let's take a look at some example schemas to see how they are similar and different
+* Any teams chosing to do something interesting beyond the basics?
+* Node.js?
+* Additional idea for Service Oriented Architecture: Loose coupling
+  * Asynchronous communication
+  * If supplier is down or slow, this doesn't harm the consumer
+  * Using the database as the queue
+* Review new and improved <%= link_to_topic :nt_outline %>
+
 
 <%= include_topic :thecloud %>
+
 <%= include_topic :cloud_role_modern_se %>
 
 #### Next Class
