--- a/content/content/lectures/part3/04_scl_cache.md.erb
+++ b/content/content/lectures/part3/04_scl_cache.md.erb
@@ -7,12 +7,12 @@ cat: scale
 <%= homework_hdr %>
 **Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
 
-1. <%= partbadge %> <%= codebadge %> **Complete nt 0.4 as a team:** See: <%= link_to_section :nt, :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
+1. <%= partbadge %> <%= codebadge %> **Complete nt 0.4 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### nT 0.4
 * 5 minute team discussion about your status
 * Write on a piece of paper what % of nT 0.0-nt 0.4 you have completed
-* Reference: <%= link_to_section :nt, :nt_outline %>
+* Reference: <%= link_to_topic :nt_outline %>
 
 #### Review and background
 * <%= link_to_lecture :architecting_for_scale %>
