--- a/content/content/lectures/part3/06_scl_concur.md.erb
+++ b/content/content/lectures/part3/06_scl_concur.md.erb
@@ -7,7 +7,7 @@ cat: scale
 <%= homework_hdr %>
 **Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
 
-1. <%=partbadge %> <%= codebadge %> <%= pdfbadge %> **nT 0.5** Complete nt 0.5 as a team (See: <%= link_to_section :nt, :nt_outline %>). Write and submit a brief project update as a pdf. What went well, what were the challenges, and what are the remaining problems. <%= team_deliverable %(nT code for 0.5 in portfolio and github. Submit to Latte the brief project update.) %>
+1. <%=partbadge %> <%= codebadge %> <%= pdfbadge %> **nT 0.5** Complete nt 0.5 as a team (See: <%= link_to_topic :nt_outline %>). Write and submit a brief project update as a pdf. What went well, what were the challenges, and what are the remaining problems. <%= team_deliverable %(nT code for 0.5 in portfolio and github. Submit to Latte the brief project update.) %>
 1. <%=partbadge %> <%= pdfbadge %>**Read**: Here's an excellent article introducing the topics we will be discussing today: [Ruby Concurrency and Parllelism: A Practical Tutorial](http://www.toptal.com/ruby/ruby-concurrency-and-parallelism-a-practical-primer). It's a little complicated, but really really worth your time and effort. You will learn a lot. As you read, consider the following warmup questions:
   * What are the critical differences, or what is the most critical difference between threads and processes?
   * In the article they explain that thread pools are a way around a problems and errors which arise when a program just creates a bunch of new threads to do the work. Can you explain why?
