--- a/content/content/lectures/part3/08_logging.md.erb
+++ b/content/content/lectures/part3/08_logging.md.erb
@@ -10,7 +10,7 @@ cat: scale
 1. <%= partbadge %> <%= pdfbadge %> <%= timebadge %> **Trip Advisor**: Experiment with Trip Advisor. Look at the Hotels page for a large city: New York, Paris, London, Tokyo. Enter some dates for a hotel stay and see the prices come up for dozens of hotels. Think about what is behind that.
 
     One fact to start with, that makes it even more complicated,  is - TripAdvisor is not a travel agency. It does not manage the prices or availability for these hotels, or make the bookings - that is handled by the online travel agencies like Expedia, Orbitz, Travelocity. <%= deliverable "Do some googling and take some guesses about what Trip Advisor's architecture is to handle the prices and availability for hotels" %> **[GRADED FOR PARTICIPATION ONLY]**
-1. <%=partbadge %> <%= codebadge %> <%= pdfbadge %> **nT 0.6** Complete nt 0.6 as a team (See: <%= link_to_section :nt, :nt_outline %>). Write and submit a brief project update as a pdf. What went well, what were the challenges, and what are the remaining problems. <%= team_deliverable %(nT code for 0.6 in portfolio and github. Submit to Latte the brief project update.) %>
+1. <%=partbadge %> <%= codebadge %> <%= pdfbadge %> **nT 0.6** Complete nt 0.6 as a team (See: <%= link_to_topic :nt_outline %>). Write and submit a brief project update as a pdf. What went well, what were the challenges, and what are the remaining problems. <%= team_deliverable %(nT code for 0.6 in portfolio and github. Submit to Latte the brief project update.) %>
 
 #### Guest Lecturer
 
