--- a/content/content/lectures/part2/05_architecting_for_scale.md.erb
+++ b/content/content/lectures/part2/05_architecting_for_scale.md.erb
@@ -13,17 +13,13 @@ cat: scale
     * Can you come up with a nanoTwitter API which would require information from multiple models to be returned, and can you see why that might make sense. Think about information hiding, or efficiency, or isolation, or other considerations.
     * Please mention one or two concepts or topics from this reading that you didn't follow or would like to learn more about.
     * <%= deliverable("Find and respond to the warmups in latte") %>
-<<<<<<< HEAD
-1. <%= partbadge %> <%= codebadge %> Complete nt 0.2 as a team (See: <%= link_to_section :nt, :nt_outline %>). Write and submit a brief project update as a markdown file. What went well, what were the challenges, and what are the remaining problems. Add that to the doc subdirectory with a date in the filename. <%= team_deliverable %(nT code for **nanoTwitter 0.2** github. Zip up the directory and submit it to Latte.) %>
-=======
-1. <%= partbadge %> <%= codebadge %> **Complete nt 0.2 as a team:** See: <%= link_to_section :nt, :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
->>>>>>> 667781c77233c767ad39888eca363af35b65621e
+1. <%= partbadge %> <%= codebadge %> **Complete nt 0.2 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### Discussion
-* Review How to do Authentication in Sinatra (see <%= link_to_section :nt, :nt_outline %>)
+* Review How to do Authentication in Sinatra (see <%= link_to_topic :nt_outline %>)
   * See: [Sinatra Authentication Example](https://sideprojectsoftware.com/blog/2015/02/22/sinatra-authentication.html) and [bcrypt for Ruby](https://github.com/codahale/bcrypt-ruby)
   * Let's look at my code
-* Review the Test Interface (see <%= link_to_section :nt, :nt_outline %>)
+* Review the Test Interface (see <%= link_to_topic :nt_outline %>)
   * Demonstrate and look at my code
 * Review http <-> URI <-> API design <-> Caching
 * Review Database join <-> un-normalized data
