--- a/content/content/lectures/part3/02_tuning_scale.md.erb
+++ b/content/content/lectures/part3/02_tuning_scale.md.erb
@@ -12,7 +12,7 @@ cat: scale
     * The second talk includes an explanation of the design elements that support the display of a new tweet on following users' timelines. It also explains design elements that allow a new tweet to appear in a search result. They are fundamentally and subtlelly different. The difference is a key part of the scalability of Twitter. You may have to view key parts of the videos more than once to get a handle on it.
     * <%= deliverable "A pdf with your diagram of the Twitter architecture as you understood it. No credit if I cannot read the diagram. And secondly, a writeup with Your explanation of what the difference between a new tweet on timeline vs. new tweet in search result." %>
 1. **Read**: Read this article to learn about the contrast between service oriented architectures and their evil counterpart, monoliths: [Monoliths are Bad Design... and you know it](https://www.thoughtworks.com/insights/blog/monoliths-are-bad-design-and-you-know-it)
-1. **Teams continue to work on nanoTwitter 0.4**. See: <%= link_to_section :nt, :nt_outline %> for detailed submission instructions and specifics for this stage.
+1. **Teams continue to work on nanoTwitter 0.4**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 
 #### Discussion
