--- a/content/content/lectures/part3/05_cloud_deployment.md.erb
+++ b/content/content/lectures/part3/05_cloud_deployment.md.erb
@@ -7,7 +7,7 @@ cat: scale
 <%= homework_hdr %>
 **Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
 
-1. <%= codebadge %> **Formal graded Checkpoint** Make sure you've completed as a team up to at least nT0.4's requirements (see <%= link_to_section :nt, :nt_outline %>), including the various documentation pieces. <%= team_deliverable "Update the github repo, zip up the directory and submit to latte."%>
+1. <%= codebadge %> **Formal graded Checkpoint** Make sure you've completed as a team up to at least nT0.4's requirements (see <%= link_to_topic :nt_outline %>), including the various documentation pieces. <%= team_deliverable "Update the github repo, zip up the directory and submit to latte."%>
 1. <%= pdfbadge %> <%= partbadge %> <%= include_topic :hw_self_peer_assess_v3 %>
 1. <%= pdfbadge %> <%= timebadge %> <%= partbadge%>  **Read and Warmups**: Read this article by famous Software Engineering thinker [Martin Fowler](http://martinfowler.com): [Continuous Integration](http://martinfowler.com/articles/continuousIntegration.html). Please answer these warmup questions:
   * Thinking about your nanoTwitter team, how close are you to meeting the criteria of Continous Integration laid out in this article?
