Checkpoint work to git

--- a/content/content/lectures/part2/04_cloudarch.md.erb
+++ b/content/content/lectures/part2/04_cloudarch.md.erb
@@ -27,6 +27,12 @@ cat: nt
   * Asynchronous communication
   * If supplier is down or slow, this doesn't harm the consumer
   * Using the database as the queue
+* Questions from Warmups
+  * Whats the difference between a feature and a potential service?
+  * What is background processing and what is it useful for?
+  * What are downsides of converting a product into SOD, or a feature into a service?
+  * What is a denormalized table and why was it mentioned?
+
 * Review new and improved <%= link_to_topic :nt_outline %>
 
 
