--- a/content/content/lectures/part2/03_sinatra_architecture.md.erb
+++ b/content/content/lectures/part2/03_sinatra_architecture.md.erb
@@ -13,7 +13,7 @@ cat: web
     * What do you know about the HTTP Response? You know all about the URL and the various HTTP request verbs, GET, PUT etc. Turning your attention now to the response: what does an HTTP response return for a typical web server? And when we are talking about a Web service in a service oriented architecture, what does an HTTP response typically include that is different? Can you motivate why it might be different in the two scenarios?
     * Still Confused? Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, say so. And add the two ideas, explanations or concepts that yove learned that you think are particularly interesting or important. Please make it clear whether it's a confusion or an insight.
   * <%= deliverable "Submit warmup questions" %>
-1. <%= pdfbadge %> **Schema:** Complete and submit the [DBSCHEMA] part of nanoTwitter 0.1 (see  <%= link_to_topic :nt_outline %>.). Do it individually, not with your team. <%= deliverable "nanoTwitter Schema Design" %>
+1. *no need for this as it is already part of the nt 0.1 instructions. Changed for 2019]* **Schema:** Complete and submit the [DBSCHEMA] part of nanoTwitter 0.1 (see  <%= link_to_topic :nt_outline %>.). Do it individually, not with your team. <%= deliverable "nanoTwitter Schema Design" %>
 1. <%= partbadge %> <%= codebadge %> **Complete nt 0.1 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### Discussion
