Checkpoint work to git

--- a/content/content/lectures/part2/05_architecting_for_scale.md.erb
+++ b/content/content/lectures/part2/05_architecting_for_scale.md.erb
@@ -19,11 +19,11 @@ cat: scale
 * Review How to do Authentication in Sinatra (see <%= link_to_topic :nt_outline %>)
   * See: [Sinatra Authentication Example](https://sideprojectsoftware.com/blog/2015/02/22/sinatra-authentication.html) and [bcrypt for Ruby](https://github.com/codahale/bcrypt-ruby)
   * Let's look at my code
-* Review the Test Interface (see <%= link_to_topic :nt_outline %>)
+* Review the Test Interface (see <%= link_to_topic :nt_test_interface %>)
   * Demonstrate and look at my code
-* Review http <-> URI <-> API design <-> Caching
-* Review Database join <-> un-normalized data
-
+* Questions
+  * What is an API exactly?
+  
 <%= include_topic :scaling %>
 
 #### Some scalability tools
