--- a/content/content/lectures/part2/06_web_services.md.erb
+++ b/content/content/lectures/part2/06_web_services.md.erb
@@ -22,11 +22,10 @@ cat: nt
     You have a few other intersting alternatives: You can use [Swagger](https://swagger.io) to document your API and actually generate code for the service and the client. Or, you can use [GraphQL](http://graphql.org) to design a totally different, modern, yet non-REST Api. Both of these options are more advanced and would be recognized as a way to make your product more advanced. <%= team_deliverable "Markdown file documentation. Submit to Latte and also store in doc/ directory of your repo." %>
 1. **Teams continue to work on nanoTwitter 0.3**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
-#### Discussion and review
-Think about this, then talk to your neighbor, write down answers:
-
-* What are some of the reasons why a product (like Facebook) would be divided up into "services"? Doing this is sometimes called a service oriented architecture. What is a service? What are some of the motivations for dividing a product into a set of services?
-* HTTP is a protocol used when one computer (the client) has to make a request of another computer (the server). The client makes a request, and the server responds to that request. What are the key parts or elements in the request? What are the key parts of building blocks of the response?
+#### Interesting, not mandatory, reading
+* [So What's This GraphQL thing I keep hearing about?](https://medium.freecodecamp.org/so-whats-this-graphql-thing-i-keep-hearing-about-baf4d36c20cf)
+* [Anatomy of a GraphQL query](https://dev-blog.apollodata.com/the-anatomy-of-a-graphql-query-6dffa9e9e747)
+* [Sinatra GraphQL example](https://github.com/robinjmurphy/ruby-graphql-server-example)
 
 <%= include_topic :rest_web_services %>
 
