Checkpoint work to git

--- a/content/content/lectures/part3/01_scaling_twitter.md.erb
+++ b/content/content/lectures/part3/01_scaling_twitter.md.erb
@@ -14,6 +14,9 @@ cat: scale
     * <%= deliverable "Write a one or two page response to the questions I posed above. Support your arguments with references to the paper or other sources." %>
 1. <%= partbadge %> <%= codebadge %> **Complete nt 0.3 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
+#### Interesting, not required, reading
+* [How Good Is Your Test Suite](https://www.codementor.io/lmuzinic/how-good-is-your-test-suite-g93tx6qot?utm_content=posts&utm_source=sendgrid&utm_medium=email&utm_term=post-g93tx6qot&utm_campaign=newsletter20180307)
+
 #### What does scaling mean for nanoTwitter?
 * What kinds of activities will likely demonstrate a scale problem?
 * Why would each of these possibly challenge scalability?
