--- a/content/content/lectures/part3/02_tuning_scale.md.erb
+++ b/content/content/lectures/part3/02_tuning_scale.md.erb
@@ -14,6 +14,10 @@ cat: scale
 1. **Read**: Read this article to learn about the contrast between service oriented architectures and their evil counterpart, monoliths: [Monoliths are Bad Design... and you know it](https://www.thoughtworks.com/insights/blog/monoliths-are-bad-design-and-you-know-it)
 1. **Teams continue to work on nanoTwitter 0.4**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
+#### Valuable but not required readings
+* [How I test my rails applicatons](https://m.patrikonrails.com/how-i-test-my-rails-applications-cf150e347a6b)
+* [Sinatra Best Practices](https://blog.carbonfive.com/2013/06/24/sinatra-best-practices-part-one/)
+
 
 #### Discussion
 * Lets look at some of your diagrams. Who wants to volunteer?
