Checkpoint work to git

--- a/content/content/lectures/part2/04_cloudarch.md.erb
+++ b/content/content/lectures/part2/04_cloudarch.md.erb
@@ -38,7 +38,7 @@ cat: nt
 
 <%= include_topic :thecloud %>
 
-<%= include_topic :cloud_role_modern_se %>
+<%= include_topic :devops %>
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
