--- a/content/content/lectures/part3/05_cloud_deployment.md.erb
+++ b/content/content/lectures/part3/05_cloud_deployment.md.erb
@@ -7,14 +7,15 @@ cat: scale
 <%= homework_hdr %>
 **Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
 
-1. <%= codebadge %> **Formal graded Checkpoint** Make sure you've completed as a team up to at least nT0.4's requirements (see <%= link_to_topic :nt_outline %>), including the various documentation pieces. <%= team_deliverable "Update the github repo, zip up the directory and submit to latte."%>
-1. <%= pdfbadge %> <%= partbadge %> <%= include_topic :hw_self_peer_assess_v3 %>
+<%= include_topic :hw_self_peer_assess_v3 %>
+{:start="2"}
 1. <%= pdfbadge %> <%= timebadge %> <%= partbadge%>  **Read and Warmups**: Read this article by famous Software Engineering thinker [Martin Fowler](http://martinfowler.com): [Continuous Integration](http://martinfowler.com/articles/continuousIntegration.html). Please answer these warmup questions:
-  * Thinking about your nanoTwitter team, how close are you to meeting the criteria of Continous Integration laid out in this article?
-  * Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, which two ideas or concepts that you think are particularly interesting? Please make it clear whether it's a confusion or an insight.
-  *  <%= deliverable "Post your response to these questions as a pdf on Latte" %>
+    * Thinking about your nanoTwitter team, how close are you to meeting the criteria of Continous Integration laid out in this article?
+    * Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, which two ideas or concepts that you think are particularly interesting? Please make it clear whether it's a confusion or an insight.
+    *  <%= deliverable "Post your response to these questions as a pdf on Latte" %>
+1. <%= codebadge %> **Formal graded Checkpoint** Make sure you've completed as a team up to at least nT0.4's requirements (see <%= link_to_topic :nt_outline %>), including the various documentation pieces. <%= team_deliverable "Update the github repo, zip up the directory and submit to latte."%>
 
-<%= include_topic :cloud_role_modern_se %>
+<%= include_topic :devops %>
 
 <%= include_topic :continuous_integ_deployment %>
 
