Checkpoint work to git

--- a/content/content/lectures/part1/06_sinatra_intro.md.erb
+++ b/content/content/lectures/part1/06_sinatra_intro.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Introduction to Sinatra
-desc: A very lightweight Ruby based web server
+desc: Sinatra is a a very lightweight Ruby based web server. We start playing with it.
 homework: 1) Study in depth [SODRR] Chapter 1, and submit warmup exercises; 2) Implement the code from that Chapter yourself.
 cat: web
 ---
