--- a/content/content/lectures/part2/02_nt_intro.md.erb
+++ b/content/content/lectures/part2/02_nt_intro.md.erb
@@ -1,6 +1,6 @@
 ---
 title: NanoTwitter introduced
-desc: Get explanation of
+desc: Get explanation of what nanoTwitter is and how it will work.
 homework: 1) Implement Twitterwhack assignment; 2) Begin work on Nanotwitter with your team.; 3) Organize your teams
 cat: web
 ---
