cleanup of styles

--- a/content/content/lectures/part3/08_logging.md.erb
+++ b/content/content/lectures/part3/08_logging.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Logging at TripAdvisor
+title: "Scaling Patterns: Logging"
 desc: Guest Speaker Bob Stachel about TripAdvisor
 homework: 1) nT Team Interim Report; 2) TripAdvisor; 3) Complete work on nT 0.6, begin on nT 0.7
 cat: scale
