--- a/content/bootstrap/css/custom.css
+++ b/content/bootstrap/css/custom.css
@@ -74,11 +74,13 @@ h1, h2, h3, h4, h5{
 }
 
 h3 {
-	margin-bottom: 15px;
+  padding: 15px;
+  background: rgb(236, 236, 236);
 }
 
 h3.body-header {
-  margin-bottom: -5px;
+  margin-left: -15px;
+  margin-top: -10px;
 }
 
 h4 {
