--- a/content/content/lectures/part3/06_scl_concur.md.erb
+++ b/content/content/lectures/part3/06_scl_concur.md.erb
@@ -9,11 +9,16 @@ cat: scale
 
 1. <%=partbadge %> <%= codebadge %> <%= pdfbadge %> **nT 0.5** Complete nt 0.5 as a team (See: <%= link_to_topic :nt_outline %>). Write and submit a brief project update as a pdf. What went well, what were the challenges, and what are the remaining problems. <%= team_deliverable %(nT code for 0.5 in portfolio and github. Submit to Latte the brief project update.) %>
 1. <%=partbadge %> <%= pdfbadge %>**Read**: Here's an excellent article introducing the topics we will be discussing today: [Ruby Concurrency and Parllelism: A Practical Tutorial](http://www.toptal.com/ruby/ruby-concurrency-and-parallelism-a-practical-primer). It's a little complicated, but really really worth your time and effort. You will learn a lot. As you read, consider the following warmup questions:
-  * What are the critical differences, or what is the most critical difference between threads and processes?
-  * In the article they explain that thread pools are a way around a problems and errors which arise when a program just creates a bunch of new threads to do the work. Can you explain why?
-  * The article describes how to threads and processes to achieve concurrency as part of a design, but also introducing Background jobs as an alternative. Can you explain the difference between using threads or processes and using a background job?
-  * Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, which two ideas or concepts that you think are particularly interesting? Please make it clear whether it's a confusion or an insight.
-  * <%= deliverable "Submit your responses as a pdf to Latte" %>
+    * What are the critical differences, or what is the most critical difference between threads and processes?
+    * In the article they explain that thread pools are a way around a problems and errors which arise when a program just creates a bunch of new threads to do the work. Can you explain why?
+    * The article describes how to threads and processes to achieve concurrency as part of a design, but also introducing Background jobs as an alternative. Can you explain the difference between using threads or processes and using a background job?
+    * Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, which two ideas or concepts that you think are particularly interesting? Please make it clear whether it's a confusion or an insight.
+    * <%= deliverable "Submit your responses as a pdf to Latte" %>
+
+#### Interesting, but not required, reading
+
+
+<%= include_topic :weekly_student_pres %>
 
 <%= include_topic :scaling_concur %>
 <%= include_topic :scaling_async %>
