--- a/layouts/course.html.erb
+++ b/layouts/course.html.erb
@@ -15,14 +15,14 @@
 
   <!-- Content Section -->
   <section>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-sm-12">
           <%= render "/body_header.*", toc: Toc.instance, item: item, citem: @citem %>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-9">
+        <div class="col-sm-9">
           <%= yield %>
         </div>
         <%= render "/sidebar.*" %>
